--- a/core/templates/blog_detail.html
+++ b/core/templates/blog_detail.html
@@ -5,13 +5,58 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="{% static 'css/style.css' %}">
-    <title>Document</title>
+    <link rel="stylesheet" href="{% static 'css/styles.css' %}">
+    <title>{{ post.title }} - Blog</title>
 </head>
 <body>
-<div>
-  <h2>{{ post.title }}</h2>
-  <p>{{ post.content }}</p>
+<div class="blog-container">
+  <article class="blog-post">
+    <h1 class="post-title">{{ post.title }}</h1>
+    
+    {% if post.image %}
+    <img src="{{ post.image.url }}" alt="{{ post.title }}" class="featured-image">
+    {% endif %}
+    
+    <div class="post-meta">
+      <span>Published on {{ post.created_at|date:"M d, Y" }}</span>
+    </div>
+
+    <div class="post-content">
+      {{ post.content|safe }}
+    </div>
+
+    {% if post.tags %}
+    <div class="post-tags">
+      {% for tag in post.tags.all %}
+      <span class="tag">{{ tag.name }}</span>
+      {% endfor %}
+    </div>
+    {% endif %}
+  </article>
+
+  <section class="comments">
+    <h3>Comments</h3>
+    <div class="comment-list">
+      {% for comment in post.comments.all %}
+      <div class="comment">
+        <div class="author">{{ comment.author }}</div>
+        <div class="body">{{ comment.body }}</div>
+      </div>
+      {% empty %}
+      <p>No comments yet. Be the first to comment!</p>
+      {% endfor %}
+    </div>
+
+    {% if user.is_authenticated %}
+    <form method="post" class="comment-form">
+      {% csrf_token %}
+      <textarea name="body" placeholder="Share your thoughts..." required></textarea>
+      <button type="submit">Post Comment</button>
+    </form>
+    {% else %}
+    <p>Please log in to comment.</p>
+    {% endif %}
+  </section>
 </div>
 </body>
 </html>
